--- a/css/style1.css
+++ b/css/style1.css
@@ -84,6 +84,10 @@ img#photoacceuil{
 	 margin-top: 30px;
 }
 
+#titre_site{
+    font-size: 2.5em;
+    margin-left: 40px;
+}
 
 /***************************************************************ACTEURS*********************************************/
 
