--- a/css/style1.css
+++ b/css/style1.css
@@ -138,13 +138,14 @@ img#photoacceuil{
 
 
 /**************************************************SYNOPSIS*********************************************************/
-#synopsis{
+/*#synopsis{
 	margin-left: 60px;
 	
-}
+}*/
 
 #fbi{
 	width: 500px;
+	margin-left: 63px;
 }
 
 #synopsis_text{
