--- a/css/style1.css
+++ b/css/style1.css
@@ -138,10 +138,10 @@ img#photoacceuil{
 
 
 /**************************************************SYNOPSIS*********************************************************/
-/*#synopsis{
+#synopsis{
 	margin-left: 60px;
 	
-}*/
+}
 
 #fbi{
 	width: 500px;
