--- a/css/style1.css
+++ b/css/style1.css
@@ -194,6 +194,7 @@ border-bottom-width: 6px;
 /****************************************************STRUCTURE ÉPISODE**********************************************/
 #structure{
 	margin-bottom: 40px;
+	margin-left: 45px;
 }
 
 #episode{
